The input[type="number"] with step="any" should not suffer from step mismatch. https://bugs.webkit.org/show_bug.cgi?id=64858

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-07-21
Reviewed by Kent Tamura.

Source/WebCore:

Added check step="any" not to suffer from step mismatch.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::applyStep): Added check step="any".
(WebCore::HTMLInputElement::alignValueForStep): Added.

LayoutTests:

Added test cases of input[type="number"] with step="any"

* fast/forms/input-stepup-stepdown-expected.txt: added the test cases.
* fast/forms/input-stepup-stepdown-from-renderer-expected.txt: ditto.
* fast/forms/script-tests/input-stepup-stepdown-from-renderer.js: ditto.
* fast/forms/script-tests/input-stepup-stepdown.js: ditto.

Canonical link: https://commits.webkit.org/80743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91549 268f45cc-cd09-0410-ab3c-d52691b4dbfc